# paper_renamer

./: .gitignore  README.md  paper_renamer.py  pixi.toml  pyproject.toml
