[project]
name = "paper-renamer"
version = "0.1.0"
description = "Automatically rename scientific PDF files based on extracted metadata"
authors = [{name = "Graham Larue"}]
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "yake>=0.4.8",
]

[project.optional-dependencies]
ocr = [
    "pdf2image>=1.16",
    "pytesseract>=0.3.10",
]

[project.scripts]
paper_renamer = "paper_renamer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
